// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: Table for recording customer details and information.
Employee: Table recording flower shop employees.
Feedback: Table collecting customer feedback on flowers or service.
Flower: details of individual flower types available.
Inventory: the inventory stock of flowers in the shop.
Order: Table for storing customer orders in the system.
OrderDetail: Junction table to capture individual flower items in orders.
OrderPromotion: Junction table linking promotions to specific orders.
Promotion: Table for recording promotions applied to flower sales.
StockPurchase: Table for recording stock purchases from suppliers.
Supplier: Table for details about suppliers who provide flowers.
WorkSchedule: Table for managing employee work schedules.
'''
}

Table Customer {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    email VARCHAR 
    phone VARCHAR 
    }

Table Employee {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    position VARCHAR 
    hire_date DATETIME 
    }

Table Feedback {
    id INTEGER [primary key]
    customer_id INTEGER 
    comments VARCHAR 
    rating INTEGER 
    }

Table Flower {
    id INTEGER [primary key]
    name VARCHAR 
    color VARCHAR 
    price FLOAT 
    }

Table Inventory {
    id INTEGER [primary key]
    flower_id INTEGER 
    quantity INTEGER 
    last_updated DATETIME 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    order_date DATETIME 
    total_amount FLOAT 
    }

Table OrderDetail {
    id INTEGER [primary key]
    order_id INTEGER 
    flower_id INTEGER 
    quantity INTEGER 
    amount FLOAT 
    }

Table OrderPromotion {
    id INTEGER [primary key]
    order_id INTEGER 
    promotion_id INTEGER 
    }

Table Promotion {
    id INTEGER [primary key]
    description VARCHAR 
    discount_percent FLOAT 
    }

Table StockPurchase {
    id INTEGER [primary key]
    supplier_id INTEGER 
    flower_id INTEGER 
    quantity INTEGER 
    purchase_date DATETIME 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    contact_name VARCHAR 
    contact_email VARCHAR 
    }

Table WorkSchedule {
    id INTEGER [primary key]
    employee_id INTEGER 
    day_of_week VARCHAR 
    start_time DATETIME 
    end_time DATETIME 
    }



// Relationships
    Ref: Feedback.(customer_id) < Customer.(id)
    Ref: Inventory.(flower_id) < Flower.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderDetail.(flower_id) < Flower.(id)
    Ref: OrderDetail.(order_id) < Order.(id)
    Ref: OrderPromotion.(order_id) < Order.(id)
    Ref: OrderPromotion.(promotion_id) < Promotion.(id)
    Ref: StockPurchase.(flower_id) < Flower.(id)
    Ref: StockPurchase.(supplier_id) < Supplier.(id)
    Ref: WorkSchedule.(employee_id) < Employee.(id)
